<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 Justice Ezenwoke Chukwuemeka
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  -->

<com.jaay.beats.uiviews.Slate
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="26dp">

    <com.jaay.beats.uiviews.Stack
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="35dp"

        app:shade="#FF888888"
        app:radius="30dp"
        app:stroke="1dp"
        app:stroke_shade="@color/beat_color">

        <com.jaay.beats.uiviews.Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"

            android:text="@string/create_a_playlist"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/beat_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginTop="16sp"

            android:background="@color/beat_color" />

        <com.jaay.beats.uiviews.Text
            android:id="@+id/playlist_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"

            android:text="@string/name"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/beat_color"/>

        <com.jaay.beats.uiviews.Edit
            android:id="@+id/playlist_bar"

            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:paddingLeft="12dp"
            android:layout_marginBottom="28dp"

            android:background="@null"
            android:maxLines="1"
            android:hint="@string/choose_a_name_for_your_playlist"
            android:inputType="textMultiLine"
            android:textColorHint="@color/beat_color"
            android:textStyle="bold"
            android:imeOptions="actionDone"

            app:radius="10dp"
            app:stroke="1dp"
            app:stroke_shade="@color/beat_color" />

        <com.jaay.beats.uiviews.Text
            android:id="@+id/added_number"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"

            android:text="@string/_0_songs_added"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/beat_color"/>

        <com.jaay.beats.uiviews.Text
            android:id="@+id/add_tracks"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="7dp"
            android:layout_marginBottom="20dp"

            android:textAlignment="center"
            android:text="@string/add_songs"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/beat_color"

            app:radius="10dp"
            app:stroke="1dp"
            app:stroke_shade="@color/beat_color"/>


        <com.jaay.beats.uiviews.Text
            android:id="@+id/done"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="35dp"
            android:padding="7dp"

            android:textAlignment="center"
            android:text="Done"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/beat_color"

            app:radius="10dp"
            app:stroke="1dp"
            app:stroke_shade="@color/beat_color" />

    </com.jaay.beats.uiviews.Stack>

</com.jaay.beats.uiviews.Slate>