<?xml version="1.0" encoding="utf-8"?>
<!--`
  ~ Copyright 2024 Justice Ezenwoke Chukwuemeka
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".activities.Base"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/black"

    app:radius="100dp">

    <com.jaay.beats.uiviews.Text
        android:id="@+id/title"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:text="All Songs"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <com.jaay.beats.uiviews.Stack
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_above="@+id/now_playing"

        android:orientation="vertical">

        <com.jaay.beats.uiviews.Slate
            android:id="@+id/container"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.jaay.beats.reels.Songs
                android:id="@+id/songs"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/black" />

            <com.jaay.beats.reels.Search
                android:id="@+id/searches"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="gone"/>

            <com.jaay.beats.reels.Favourites
                android:id="@+id/favourites"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="gone"/>

            <com.jaay.beats.reels.AllPlaylists
                android:id="@+id/playlists"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="gone"/>

        </com.jaay.beats.uiviews.Slate>

    </com.jaay.beats.uiviews.Stack>

    <view
        android:id="@+id/now_playing"

        class="com.jaay.beats.reels.Playing$NowPlaying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tab"

        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/tab"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1">

        <com.jaay.beats.uiviews.Stack
            android:id="@+id/home"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <com.jaay.beats.uiviews.Image
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"

                android:src="@drawable/home"
                android:tint="#FF888888" />

            <TextView
                android:id="@+id/home_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/home"
                android:textColor="#FF888888"
                android:textSize="16sp" />

        </com.jaay.beats.uiviews.Stack>

        <com.jaay.beats.uiviews.Stack
            android:id="@+id/search_button"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <com.jaay.beats.uiviews.Image
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"

                android:src="@drawable/search"
                android:tint="#FF888888" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/search"
                android:textColor="#FF888888"
                android:textSize="16sp" />

        </com.jaay.beats.uiviews.Stack>

        <com.jaay.beats.uiviews.Stack
            android:id="@+id/favourites_button"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <com.jaay.beats.uiviews.Image
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"

                android:src="@drawable/heart"
                android:tint="#FF888888" />

            <TextView
                android:id="@+id/favorites"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/favourites"
                android:textColor="#FF888888"
                android:textSize="16sp" />

        </com.jaay.beats.uiviews.Stack>

        <com.jaay.beats.uiviews.Stack
            android:id="@+id/playlists_button"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <com.jaay.beats.uiviews.Image
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"

                android:src="@drawable/library"
                android:tint="#FF888888" />

            <TextView
                android:id="@+id/library"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/playlists"
                android:textColor="#FF888888"
                android:textSize="16sp" />

        </com.jaay.beats.uiviews.Stack>

    </LinearLayout>

    <com.jaay.beats.reels.Playing
        android:id="@+id/playing"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="gone"/>

    <com.jaay.beats.uiviews.Options
        android:id="@+id/options"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="gone"/>

</RelativeLayout>